more spacing fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,3 +8,10 @@
     padding-right: 5px;
   }
   
+  
+.info-break-left{
+    border-right: 1px solid rgba(0,0,0,.1);
+    padding-right: 5px;
+    padding-left: 5px;
+  }
+  
